--- a/programs.cfg
+++ b/programs.cfg
@@ -1,9 +1,9 @@
 {
   ["CMP"] = {
     files = {
-      ["master/discord.lua"] = "//home"
-      ["master/options.lua"] = "//home"
-      ["master/shortcuts.lua"] = "//home"
+      ["master/discord.lua"] = "//home",
+      ["master/options.lua"] = "//home",
+      ["master/shortcuts.lua"] = "//home",
     },
     name = "CMP",
     description = "A minimalistic discord webhook based 1 way "chat app"",
