--- a/programs.cfg
+++ b/programs.cfg
@@ -6,7 +6,7 @@
       ["master/shortcuts.lua"] = "//home",
     },
     name = "CMP",
-    description = "A minimalistic discord webhook based 1 way "chat app"",
+    description = "A minimalistic discord webhook based 1 way \"chat app\"",
     authors = "PureComedi",
     note = "Make sure to do oppm register PureComedi/CMPSync before installing",
     hidden = false,
