--- a/programs.cfg
+++ b/programs.cfg
@@ -1,11 +1,11 @@
 {
-  ["CMP"] = {
+  ["cmp"] = {
     files = {
       ["master/discord.lua"] = "//home",
       ["master/options.lua"] = "//home",
       ["master/shortcuts.lua"] = "//home",
     },
-    name = "CMP",
+    name = "cmp",
     description = "A minimalistic discord webhook based 1 way \"chat app\"",
     authors = "PureComedi",
     note = "Make sure to do oppm register PureComedi/CMPSync before installing",
