--- a/programs.cfg
+++ b/programs.cfg
@@ -5,7 +5,7 @@
       ["master/options.lua"] = "//home",
       ["master/shortcuts.lua"] = "//home",
     },
-    name = "cmp",
+    name = "CMP",
     description = "A minimalistic discord webhook based 1 way \"chat app\"",
     authors = "PureComedi",
     note = "Make sure to do oppm register PureComedi/CMPSync before installing",
